Reworked a bit of the gallery view to fix additional "pages" of requests with infinite scrolling and some images were not fitting properly to the cards. Also tags now don't take up too much room and have a "..." tag when more tags are available to be moused over.

--- a/src/app/image-gallery/image-gallery.component.css
+++ b/src/app/image-gallery/image-gallery.component.css
@@ -1,4 +1,23 @@
 .image-card img {
   height: 200px;
-  object-fit: cover; /* Ensure images cover the area */
+  width: 100%;
+  object-fit: contain;
+}
+
+.scroll-trigger {
+  height: 1px;
+  margin-top: 20px;
+}
+
+.tags-wrapper {
+  max-height: 40px;
+  overflow: hidden;
+  position: relative;
+  margin-top: 5px;
+}
+
+
+/* Adjust badge margin for better wrapping */
+.tags-wrapper .badge {
+  margin-bottom: 4px;
 }
